messed around with editing the bundle to see where the changes are done, and how can be used.  Also started to try and use more prime faces.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,11 +5,13 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Facelet Title</title>
+        <title>JRS Restaurant</title>
         <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
-        Hello from Facelets
+        Welcome to JRS Restaurant
+        <br />
+        <h:link outcome="/menu/order" value="Create an Order"/>
         <br />
         <h:link outcome="/menu/List" value="Show All Menu Items"/>
     </h:body>
