--- a/src/main/webapp/menu/Create.xhtml
+++ b/src/main/webapp/menu/Create.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
@@ -16,11 +17,11 @@
             <h:form>
                 <h:panelGrid columns="2">
                     <h:outputLabel value="#{bundle.CreateMenuLabel_itemId}" for="itemId" />
-                    <h:inputText id="itemId" value="#{menuController.selected.itemId}" title="#{bundle.CreateMenuTitle_itemId}" required="true" requiredMessage="#{bundle.CreateMenuRequiredMessage_itemId}"/>
+                    <p:inputText id="itemId" value="#{menuController.selected.itemId}" title="#{bundle.CreateMenuTitle_itemId}" required="true" requiredMessage="#{bundle.CreateMenuRequiredMessage_itemId}"/>
                     <h:outputLabel value="#{bundle.CreateMenuLabel_itemName}" for="itemName" />
-                    <h:inputText id="itemName" value="#{menuController.selected.itemName}" title="#{bundle.CreateMenuTitle_itemName}" />
+                    <p:inputText id="itemName" value="#{menuController.selected.itemName}" title="#{bundle.CreateMenuTitle_itemName}" />
                     <h:outputLabel value="#{bundle.CreateMenuLabel_itemPrice}" for="itemPrice" />
-                    <h:inputText id="itemPrice" value="#{menuController.selected.itemPrice}" title="#{bundle.CreateMenuTitle_itemPrice}" />
+                    <p:inputText id="itemPrice" value="#{menuController.selected.itemPrice}" title="#{bundle.CreateMenuTitle_itemPrice}" />
                 </h:panelGrid>
                 <br />
                 <h:commandLink action="#{menuController.create}" value="#{bundle.CreateMenuSaveLink}" />
