--- a/src/main/webapp/menu/order.xhtml
+++ b/src/main/webapp/menu/order.xhtml
@@ -8,11 +8,9 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <f:form>
-            <p:dataTable var="menu">
-                
-            </p:dataTable>
-        </f:form>
+        <h:form>
+         
+        </h:form>
     </h:body>
 </html>
 
